# Prueba-23-march.2026

./: .env.example  .gitignore  .pre-commit-config.yaml  ACTIONABLE_PLAN.md  CAREER_GUIDE.md  CAREER_QUICK_REFERENCE.md  CAREER_START_HERE.md  QUICKSTART.md  README.md  TESTING.md  TRABAJO_HOY.md  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
scripts/: generate_mock_data.py  generate_visualizations.py  test_data_sources.py  test_pipeline.py
src/: __init__.py  analysis.py  data_fetcher.py  etl_pipeline.py  predictive_models.py  visualizers.py
tests/: test_analysis.py  test_predictive_models.py  test_visualizers.py
