[project]
name = "f1-rhythm-analysis"
version = "0.1.0"
description = "Analysis of pace progression in F1 races - lap times, pilot comparisons, and tire degradation patterns"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "F1 Analysis Team" }
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "scikit-learn>=1.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipython>=8.10.0",
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
viz = [
    "plotly>=5.17.0",
    "kaleido>=0.2.1",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.ruff]
line-length = 120
target-version = "py310"
select = ["E", "F", "W"]
ignore = ["E501"]  # line too long (handled by black)
